--- a/index.html
+++ b/index.html
@@ -26,21 +26,23 @@
         </nav>
     </header>
 
-    <aside class="title">
+    <div class="fondo">
+        <aside class="title">
         <h1>BIENVENIDOS A TATTOO INC</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui iusto illum pariatur aspernatur, laboriosam
-            repellat.</p>
-    </aside>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui iusto illum pariatur aspernatur, laboriosam
+                repellat.</p>
+        </aside>
 
-    <section class="seccion1">
-        <h2>NUESTRO STAFF</h2>
-        <div class="grid-container">
-            <div><img src="./images/tatuador.jpg" alt="tatuadores"></div>
-            <div><img src="./images/tatuador2.jpg" alt="tatuadores"></div>
-            <div><img src="./images/tatuador3.jpg" alt="tatuadores"></div>
-        </div>
-    </section>
-
+        <section class="seccion1">
+            <h2>NUESTRO STAFF</h2>
+            <div class="grid-container">
+                <div><img src="./images/tatuador.jpg" alt="tatuadores"></div>
+                <div><img src="./images/tatuador2.jpg" alt="tatuadores"></div>
+                <div><img src="./images/tatuador3.jpg" alt="tatuadores"></div>
+            </div>
+        </section>
+    </div>
+    
     <footer class="footer">
         <ul>
             <li><a href="https://www.instagram.com/" target="#">Instagram</a></li>
