--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="./images/favicon.ico.jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/style.css">
     <title>Home | Tattoo Inc</title>
 </head>
@@ -27,7 +28,7 @@
     </header>
 
     <div class="fondo">
-        <aside class="title">
+        <aside class="title animate__fadeInDown animate__animated">
         <h1>BIENVENIDOS A TATTOO INC</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui iusto illum pariatur aspernatur, laboriosam
                 repellat.</p>
